--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       &nbsp;ms&nbsp;&nbsp;
     </span>
     <span id="fps"></span>
+    <span>Neighborhood:&nbsp;&nbsp;
+      <input id="neighborhood_size" name="neighborhood_size" type="number" value="1" placeholder="1"/>
+      &nbsp;
+    </span>
     <br>
     <hr>
     <span><b>Start Condition:&nbsp;</b></span>
@@ -272,7 +276,8 @@
             Math.max(Math.min(valuesJSON.naturalDeath, 255), 0),
             120, // History
             eval(valuesJSON.startCondition),
-            valuesJSON.startConditionModulator);
+            valuesJSON.startConditionModulator,
+            valuesJSON.neighborhood_size);
         
         const viewer = new Viewer(
             offscreen,
